assignment settings and assignment condition
